syntax = "proto3";

package stats.service.dashboard;

import "google/protobuf/empty.proto";
import "stats/messages/action/request.proto";

option java_package = "ru.practicum.ewm.stats.proto";

service RecommendationsController {
  rpc GetRecommendationsForUser (stats.service.dashboard.UserPredictionsRequestProto)
      returns (stream stats.service.dashboard.RecommendedEventProto);

  rpc GetSimilarEvents (stats.service.dashboard.SimilarEventsRequestProto)
      returns (stream stats.service.dashboard.RecommendedEventProto);

  rpc GetInteractionsCount (stats.service.dashboard.InteractionsCountRequestProto)
      returns (stream stats.service.dashboard.RecommendedEventProto);
}